syntax = "proto3";

package golem.common;

enum FilterComparator {
  EQUAL = 0;
  NOT_EQUAL = 1;
  LESS = 2;
  LESS_EQUAL = 3;
  GREATER = 4;
  GREATER_EQUAL = 5;
}